add tests again, remove old tests